--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,13 @@ black==22.6.0
 click==8.1.3
 colorama==0.4.5
 coverage==6.4.2
-Django==4.1
+Django==4.0.6
+django-extensions==3.2.0
 djangorestframework==3.13.1
 mypy-extensions==0.4.3
 pathspec==0.9.0
 platformdirs==2.5.2
+python-decouple==3.6
 pytz==2022.1
 sqlparse==0.4.2
 tomli==2.0.1
