--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ djangorestframework==3.13.1
 mypy-extensions==0.4.3
 pathspec==0.9.0
 platformdirs==2.5.2
+PyJWT==2.4.0
 python-decouple==3.6
 pytz==2022.1
 sqlparse==0.4.2
