--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,24 @@
 asgiref==3.5.2
+atomicwrites==1.4.1
+attrs==22.1.0
 black==22.6.0
 click==8.1.3
 colorama==0.4.5
 coverage==6.4.2
 Django==4.0.6
 django-extensions==3.2.0
+django-filter==22.1
 djangorestframework==3.13.1
+iniconfig==1.1.1
 mypy-extensions==0.4.3
+packaging==21.3
 pathspec==0.9.0
 platformdirs==2.5.2
+pluggy==1.0.0
+py==1.11.0
 PyJWT==2.4.0
+pyparsing==3.0.9
+pytest==7.1.2
 python-decouple==3.6
 pytz==2022.1
 sqlparse==0.4.2
