--- a/requirements.txt
+++ b/requirements.txt
@@ -9,11 +9,14 @@ colorama==0.4.5
 coreapi==2.3.3
 coreschema==0.0.4
 coverage==6.4.2
+dj-database-url==1.0.0
 Django==4.0.6
 django-extensions==3.2.0
 django-filter==22.1
+django-heroku==0.3.1
 djangorestframework==3.13.1
 drf-yasg==1.21.3
+gunicorn==20.1.0
 idna==3.3
 inflection==0.5.1
 iniconfig==1.1.1
@@ -25,6 +28,7 @@ packaging==21.3
 pathspec==0.9.0
 platformdirs==2.5.2
 pluggy==1.0.0
+psycopg2==2.9.3
 py==1.11.0
 PyJWT==2.4.0
 pyparsing==3.0.9
@@ -39,3 +43,4 @@ tomli==2.0.1
 tzdata==2022.1
 uritemplate==4.1.1
 urllib3==1.26.11
+whitenoise==6.2.0
